# UniversalMCP

./: .gitignore  Agents.md  Bitácora de Desarrollo - V1.md  ESTADO_FINAL_V1.md  Investigación de Servidores MCP para Desarrollo - v2.md  LICENSE.md  PLAN_V2.md  POST_V1.md  Plan Técnico de Desarrollo - V1.md  README.md  pyproject.toml  skills.md
scripts/: validate_runtime.sh
tests/: test_catalog.py  test_cli_logs.py  test_cli_wrapper.py  test_daemon_control.py  test_external_mcp.py  test_filesystem_adapter.py  test_git_adapter.py  test_github_preflight.py  test_health.py  test_memory_filter.py  test_observability.py  test_process_router.py  test_runtime_state.py  test_secrets.py  test_server_filesystem.py  test_server_git.py  test_server_helpers.py  test_translator.py
universal_mcp/: __init__.py
universal_mcp/cli/: AGENTS.override.md  main.py  onboarding.py  views.py  wrapper.py
universal_mcp/config/: catalog.py  profiles.py  secrets.py  settings.py
universal_mcp/daemon/: AGENTS.override.md  __init__.py  external_mcp.py  filesystem_adapter.py  git_adapter.py  health.py  internal_tools.py  memory_filter.py  multiplexer.py  process_router.py  server.py  state.py  translator.py
universal_mcp/observability/: events.py  logging.py
universal_mcp/runtime/: daemon_control.py  paths.py  pid.py  state_store.py
